crates/abp-protocol/tests/snapshots/snapshots_test__envelope_event_file_changed.snap
---
source: crates/abp-protocol/tests/snapshots_test.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-001",
  "event": {
    "ts": "2024-01-01T00:00:00Z",
    "type": "file_changed",
    "path": "src/lib.rs",
    "summary": "added fn"
  }
}
