crates/abp-protocol/tests/snapshots/snapshots_test__envelope_event_tool_call.snap
---
source: crates/abp-protocol/tests/snapshots_test.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-001",
  "event": {
    "ts": "2024-01-01T00:00:00Z",
    "type": "tool_call",
    "tool_name": "read",
    "tool_use_id": "tu_1",
    "parent_tool_use_id": null,
    "input": {
      "path": "file.rs"
    }
  }
}
