crates/abp-protocol/tests/snapshots/snapshots_test__envelope_fatal.snap
---
source: crates/abp-protocol/tests/snapshots_test.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-001",
  "error": "sidecar crashed"
}
