crates/abp-protocol/tests/snapshots/snapshots_test__envelope_fatal_no_ref.snap
---
source: crates/abp-protocol/tests/snapshots_test.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": null,
  "error": "startup failure"
}
